--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 20px 40px;
   font-family: 'Open Sans Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10,11 +11,11 @@ code {
     monospace;
 }
 
-a{
-  text-decoration:  none;
+a {
+  text-decoration: none;
   color: black;
 }
 
-*{
+* {
   box-sizing: border-box;
 }
